tests/cases/match/errors/enum-payload-unsupported-vector.ari
enum Bad {
  Items(Vec[i64]),
}

fn main() -> i64 {
  return 0;
}
